# Neural-SDF

./: .env  .gitignore  CMakeLists.txt  Makefile  README.md  build_gpu.sh  conanfile.txt  pyproject.toml  run_kslicer.sh  sdf1_arch.txt
conf/: camera_2.txt  camera_3.txt  light.txt  train.txt
example_tracer/: example_tracer.cpp
include/: argparser.h  configs.h  ray_marcher.h  read_utils.h  utils.h
lib/: CMakeLists.txt  argparser.cpp  configs.cpp  ray_marcher.cpp  read_utils.cpp  utils.cpp
nn/: CMakeLists.txt  siren.cpp  siren.h
ray_marcher/: CMakeLists.txt  ray_marcher.cpp  ray_marcher.h  utils.cpp
scripts/: clean.sh  common.py  infer.py  layers.py  run_kslicer.sh  setup_kslicer.sh  train.py
test/unit/: CMakeLists.txt  siren.cpp
